--- a/src/app/components/promo-slider/promo-slider.component.html
+++ b/src/app/components/promo-slider/promo-slider.component.html
@@ -27,6 +27,17 @@
           </div>
         </div>
       </ng-container>
+      <ng-container *ngIf="!loading">
+        <div class="swiper-slide" *ngFor="let p of promos">
+          <div class="card" role="button" tabindex="0" (click)="onSelectPromo(p)">
+            <div class="img-wrap">
+              <img [src]="p.imagenUrl || p.imagen || 'assets/img/placeholder.png'"
+                   (error)="onImgError($event)"
+                   [alt]="p.nombre ?? p.name ?? ''" />
+            </div>
+          </div>
+        </div>
+      </ng-container>
     </div>
 
     <!-- pagination bullets -->
