Ion menu para admin

--- a/src/app/pages/admin-usuarios/admin-usuarios.page.html
+++ b/src/app/pages/admin-usuarios/admin-usuarios.page.html
@@ -1,6 +1,8 @@
+<app-ion-menu></app-ion-menu>
+
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Dashboard - Gestión de Usuarios</ion-title>
+    <ion-title>Gestion de Usuarios</ion-title>
   </ion-toolbar>
 </ion-header>
 
