Actualizacion de vista admin

--- a/src/app/components/ion-menu/ion-menu.component.html
+++ b/src/app/components/ion-menu/ion-menu.component.html
@@ -19,7 +19,7 @@
     </div>
 
     <!-- Acordiones: sólo si hay sesión -->
-    <ng-container >
+    <ng-container>
       <ion-accordion-group class="accordion-wrap">
         <ion-accordion value="gestion" *ngIf="rol === 'cliente'">
           <ion-item slot="header" button>
@@ -59,7 +59,6 @@
             </ion-list>
           </div>
         </ion-accordion>
-        
 
         <ion-accordion value="admin">
           <ion-item slot="header" button>
@@ -71,32 +70,77 @@
 
           <div class="accordion-content" slot="content">
             <ion-list>
-              <div >
-                <ion-item button [routerLink]="['/admin-usuarios']" menuClose detail="false">
+              <div>
+                <ion-item
+                  button
+                  [routerLink]="['/inicio']"
+                  menuClose
+                  detail="false"
+                >
+                  <ion-icon name="shield-check" slot="start"></ion-icon>
+                  <ion-label>App</ion-label>
+                </ion-item>
+              </div>
+            </ion-list>
+          </div>
+        </ion-accordion>
+
+        <ion-accordion value="admin">
+          <ion-item slot="header" button>
+            <ion-label>
+              <h3>Panel Administrativo</h3>
+              <p>Control de Usuarios ,Productos ,Pedidos y Promociones</p>
+            </ion-label>
+          </ion-item>
+
+          <div class="accordion-content" slot="content">
+            <ion-list>
+              <div>
+                <ion-item
+                  button
+                  [routerLink]="['/admin-usuarios']"
+                  menuClose
+                  detail="false"
+                >
                   <ion-icon name="shield-check" slot="start"></ion-icon>
                   <ion-label>Gestion de Usuarios</ion-label>
                 </ion-item>
               </div>
             </ion-list>
-                        <ion-list>
-              <div >
-                <ion-item button [routerLink]="['/admin-productos']" menuClose detail="false">
+            <ion-list>
+              <div>
+                <ion-item
+                  button
+                  [routerLink]="['/admin-productos']"
+                  menuClose
+                  detail="false"
+                >
                   <ion-icon name="shield-check" slot="start"></ion-icon>
                   <ion-label>Gestion de Productos</ion-label>
                 </ion-item>
               </div>
             </ion-list>
-                        <ion-list>
-              <div >
-                <ion-item button [routerLink]="['/admin-pedidos']" menuClose detail="false">
+            <ion-list>
+              <div>
+                <ion-item
+                  button
+                  [routerLink]="['/admin-pedidos']"
+                  menuClose
+                  detail="false"
+                >
                   <ion-icon name="shield-check" slot="start"></ion-icon>
                   <ion-label>Gestion de Pedidos</ion-label>
                 </ion-item>
               </div>
             </ion-list>
-                        <ion-list>
-              <div >
-                <ion-item button [routerLink]="['/admin-promos']" menuClose detail="false">
+            <ion-list>
+              <div>
+                <ion-item
+                  button
+                  [routerLink]="['/admin-promos']"
+                  menuClose
+                  detail="false"
+                >
                   <ion-icon name="shield-check" slot="start"></ion-icon>
                   <ion-label>Gestion de Promociones</ion-label>
                 </ion-item>
@@ -108,12 +152,13 @@
     </ng-container>
   </ion-content>
   <div class="ion-page" id="main">
-  <ion-header>
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</div>
+    <ion-header>
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+  </div></ion-menu
+>
