--- a/src/app/pages/admin-pedidos/admin-pedidos.page.html
+++ b/src/app/pages/admin-pedidos/admin-pedidos.page.html
@@ -1,5 +1,7 @@
 <app-ion-menu></app-ion-menu>
 
+<app-ion-menu></app-ion-menu>
+
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>admin-pedidos</ion-title>
