--- a/src/app/pages/chat/chat.page.html
+++ b/src/app/pages/chat/chat.page.html
@@ -1,9 +1,35 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Multipizza - BOT</ion-title>
+<ion-header>
+  <ion-toolbar class="app-header-toolbar">
+    <!-- botón programático que abre el ion-menu -->
+
+    <ion-title class="app-title">Multipizza - Bot</ion-title>
+
+    <ion-buttons slot="end" class="header-actions">
+      <div class="actions-group">
+
+        <!-- Carrito (sin tocar) -->
+        <div class="action-item">
+          <ion-button
+            fill="clear"
+            class="icon-button cart-button"
+            [class.pulse]="cartPulse"
+            (click)="openCart()"
+            aria-label="Carrito"
+          >
+            <ion-icon slot="icon-only" [name]="cartIcon"></ion-icon>
+          </ion-button>
+          <ion-badge
+            class="action-badge cart-badge"
+            *ngIf="carritoCount > 0"
+            aria-live="polite"
+            >{{ carritoCount }}</ion-badge
+          >
+        </div>
+      </div>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
 <ion-content [fullscreen]="true">
   <app-chatbot></app-chatbot>
 </ion-content>
+<app-footer></app-footer>
