actualizacion de admin pedidos e ion menu

--- a/src/app/components/ion-menu/ion-menu.component.html
+++ b/src/app/components/ion-menu/ion-menu.component.html
@@ -60,6 +60,7 @@
           </div>
         </ion-accordion>
 
+        
         <ion-accordion value="admin">
           <ion-item slot="header" button>
             <ion-label>
@@ -70,95 +71,72 @@
 
           <div class="accordion-content" slot="content">
             <ion-list>
-              <div>
-                <ion-item
-                  button
-                  [routerLink]="['/inicio']"
-                  menuClose
-                  detail="false"
-                >
-                  <ion-icon name="shield-check" slot="start"></ion-icon>
-                  <ion-label>App</ion-label>
-                </ion-item>
-              </div>
+              <ion-item
+                button
+                [routerLink]="['/admin-usuarios']"
+                (click)="closeMenu()"
+                detail="false"
+              >
+                <ion-icon name="shield-check" slot="start"></ion-icon>
+                <ion-label>Gestión de Usuarios</ion-label>
+              </ion-item>
+
+              <ion-item
+                button
+                [routerLink]="['/admin-productos']"
+                (click)="closeMenu()"
+                detail="false"
+              >
+                <ion-icon name="shield-check" slot="start"></ion-icon>
+                <ion-label>Gestión de Productos</ion-label>
+              </ion-item>
+
+              <ion-item
+                button
+                [routerLink]="['/admin-pedidos']"
+                (click)="closeMenu()"
+                detail="false"
+              >
+                <ion-icon name="shield-check" slot="start"></ion-icon>
+                <ion-label>Gestión de Pedidos</ion-label>
+              </ion-item>
+
+              <ion-item
+                button
+                [routerLink]="['/admin-promos']"
+                (click)="closeMenu()"
+                detail="false"
+              >
+                <ion-icon name="shield-check" slot="start"></ion-icon>
+                <ion-label>Gestión de Promociones</ion-label>
+              </ion-item>
             </ion-list>
           </div>
-        </ion-accordion>
+</ion-accordion>
+<ion-accordion value="app">
+  <ion-item slot="header" button>
+    <ion-label>
+      <h3>Ir a la Pagina principal</h3>
+    </ion-label>
+  </ion-item>
 
-        <ion-accordion value="admin">
-          <ion-item slot="header" button>
-            <ion-label>
-              <h3>Panel Administrativo</h3>
-              <p>Control de Usuarios ,Productos ,Pedidos y Promociones</p>
-            </ion-label>
-          </ion-item>
-
-          <div class="accordion-content" slot="content">
-            <ion-list>
-              <div>
-                <ion-item
-                  button
-                  [routerLink]="['/admin-usuarios']"
-                  menuClose
-                  detail="false"
-                >
-                  <ion-icon name="shield-check" slot="start"></ion-icon>
-                  <ion-label>Gestion de Usuarios</ion-label>
-                </ion-item>
-              </div>
-            </ion-list>
-            <ion-list>
-              <div>
-                <ion-item
-                  button
-                  [routerLink]="['/admin-productos']"
-                  menuClose
-                  detail="false"
-                >
-                  <ion-icon name="shield-check" slot="start"></ion-icon>
-                  <ion-label>Gestion de Productos</ion-label>
-                </ion-item>
-              </div>
-            </ion-list>
-            <ion-list>
-              <div>
-                <ion-item
-                  button
-                  [routerLink]="['/admin-pedidos']"
-                  menuClose
-                  detail="false"
-                >
-                  <ion-icon name="shield-check" slot="start"></ion-icon>
-                  <ion-label>Gestion de Pedidos</ion-label>
-                </ion-item>
-              </div>
-            </ion-list>
-            <ion-list>
-              <div>
-                <ion-item
-                  button
-                  [routerLink]="['/admin-promos']"
-                  menuClose
-                  detail="false"
-                >
-                  <ion-icon name="shield-check" slot="start"></ion-icon>
-                  <ion-label>Gestion de Promociones</ion-label>
-                </ion-item>
-              </div>
-            </ion-list>
-          </div>
-        </ion-accordion>
-      </ion-accordion-group>
+  <div class="accordion-content" slot="content">
+    <ion-list>
+      <div>
+        <ion-item
+          button
+          [routerLink]="['/inicio']"
+          menuClose
+          detail="false"
+        >
+          <ion-icon name="shield-check" slot="start"></ion-icon>
+          <ion-label>App</ion-label>
+        </ion-item>
+      </div>
+    </ion-list>
+  </div>
+</ion-accordion>
+</ion-accordion-group>
     </ng-container>
   </ion-content>
-  <div class="ion-page" id="main">
-    <ion-header>
-      <ion-toolbar>
-        <ion-buttons slot="start">
-          <ion-menu-button></ion-menu-button>
-        </ion-buttons>
-        <ion-title>Menu</ion-title>
-      </ion-toolbar>
-    </ion-header>
-  </div></ion-menu
->
+
